--- a/example/.gitignore
+++ b/example/.gitignore
@@ -35,3 +35,14 @@ lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+
+# Flutter build files
+README.md
+analysis_options.yaml
+android/
+ios/
+linux/
+macos/
+test/
+web/
+windows/
